tweaked Input classes, moved DB_TBLPREFIX code, ...
and other minor stuff

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 todo:
 
 - write the new Router
+- CLInput->args is broken for now -- make it work
+- standardize autoloader behavior for dbal and dice
 - ditch existing Error class for a proper Exception class
 - move all database-y stuff to use Doctrine DBAL...
 - ... once I get its position in the directory structure right.
